<resources>
    <string name="app_name">Succulent Shop</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="related_products">Related products:</string>
    <string name="retry">Retry</string>
    <string name="log_out">Log out</string>
</resources>